1.默认管理员死账号登录  2.学生信息增删改查  3.专业班级增删改  3.课程增删改查  4.为学生安排课程